# cubemx2cmake

./: CubeMX2CMake.py  CubeMXConverter.py  LICENSE  MANIFEST  README.md  README.rst  __init__.py  setup.py  steps.txt
converter/: CMakeCubeMX.py  CMakeLists.txt  CubeMX2CMakeConverter.py  MakefileConverter.py  MakefileParser.py  __init__.py  armv7-toolchain.cmake  stlink.cmake
converter/CubeIDEConverter/: CubeIDEConverter.py  __init__.py
converter/CubeIDEConverter/cmake/: CMakeLists.txt  FindTouchGFX.cmake  armv7-toolchai.cmake
converter/MakefileConverter/: CMakeCubeMX.py  CMakeLists.txt  MakefileConverter.py
converter/cmake/: armv7hf-toolchain.cmake  stlink.cmake
src/CubeIDEConverter/: CubeIDEConverter.py
src/CubeIDEConverter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/CubeIDEConverter/cmake/: armv7hf-toolchain.cmake
src/cubeide_converter/: __init__.py  cubeide_converter.py
src/cubeide_converter/cmake/: CMakeLists.txt  FindSTDrivers.cmake
src/cubeide_converter/vscode/: c_cpp_properties.json  launch.json  settings.json  tasks.json
